Atualização no "div_body"

--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -14,10 +14,11 @@ body{
 #div_navbar{
     width: 100%;
     margin: auto;
-    
 }
 
-#div_boy{
+#div_body{
     width: 60%;
     margin: auto;
+    background-color: blanchedalmond;
+    border-radius: 1px;
 }
