--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -46,8 +46,8 @@ footer img{
 
 body{
     background-image: url(../imagens/background.jpg);
-    background-repeat: repeat;
-    background-size: 100% 50%;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 #div_navbar{
     width: 100%;
