--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -24,6 +24,13 @@
     font-size: 18px;
 }
 
+.topic_content form{
+    padding: 0.5em 0em 0.5em 0em;
+    width: 90%;
+    margin: auto;
+    font-size: 18px;
+}
+
 h1{
     width: 90%;
     margin: auto;
@@ -37,7 +44,7 @@ h2{
 }
 
 footer{
-margin: 450px 1px 1px 620px;
+margin: 7em 1em 2em 40em;
 }
 
 footer img{
