Renomeio de background

--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../imagens/background_3.jpg);
+    background-image: url(../imagens/background.jpg);
     background-repeat: repeat-y;
     background-size: 140em 60em;
 }
