--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -41,6 +41,13 @@ footer img {
     margin-bottom: 0.5em;
 }
 
+marquee{
+    font-size: 12px;
+    color: lime;
+    font-style: oblique;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
 .topic {
     height: 700px;
     width: 40%;
@@ -79,4 +86,15 @@ footer img {
 #apresentacao {
     padding-left: 50em;
     text-align: right;
+}
+
+#sidebar{
+    border-radius: 1em;
+    width: 15em;
+    height: 10em;
+    text-align: center;
+    margin-left: 2em;
+    margin-top: 10em;
+    overflow: hidden;
+    position: fixed;
 }
