--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -98,3 +98,29 @@ marquee{
     overflow: hidden;
     position: fixed;
 }
+
+@media (max-width: 600px){
+    .topic {
+        height: 700px;
+        width: 90%;
+        margin: auto;
+        margin-top: 3em;
+    }
+
+    footer {
+        width: 25%;
+        margin: 12em 1em 2em 11em;
+        background-color: rgb(222, 211, 226);
+        text-align: center;
+        border-radius: 1em;
+    }
+
+    #apresentacao {
+        padding-left: 50em;
+        text-align: right;
+    }
+    
+    #sidebar{
+        display: none;
+    }
+}
