--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -30,7 +30,7 @@ div img {
 footer {
     width: 8%;
     margin: 12em 1em 2em 39.5em;
-    background-color: rgb(222, 211, 226);
+    background-color: lightgrey;
     text-align: center;
     border-radius: 1em;
 }
@@ -56,7 +56,7 @@ marquee{
 }
 
 .topic_content {
-    background-color: rgb(222, 211, 226);
+    background-color: lightgrey;
     border-radius: 1em;
     box-shadow: 10px 10px 5px;
 }
@@ -110,7 +110,7 @@ marquee{
     footer {
         width: 25%;
         margin: 12em 1em 2em 11em;
-        background-color: rgb(222, 211, 226);
+        background-color: lightgrey;
         text-align: center;
         border-radius: 1em;
     }
