--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -41,7 +41,7 @@ footer img {
     margin-bottom: 0.5em;
 }
 
-marquee{
+marquee {
     font-size: 12px;
     color: lime;
     font-style: oblique;
@@ -88,7 +88,7 @@ marquee{
     text-align: right;
 }
 
-#sidebar{
+#sidebar {
     border-radius: 1em;
     width: 15em;
     height: 10em;
@@ -99,20 +99,22 @@ marquee{
     position: fixed;
 }
 
-@media (max-width: 600px){
+#auto_propaganda {
+    display: none;
+}
+
+@media (max-width: 600px) {
     .topic {
         height: 700px;
         width: 90%;
         margin: auto;
         margin-top: 3em;
     }
-
     body {
         background-image: url(../imagens/background.jpg);
         background-repeat: repeat-y;
         background-size: 50em 30em;
     }
-
     footer {
         width: 25%;
         margin: 12em 1em 2em 9em;
@@ -120,13 +122,17 @@ marquee{
         text-align: center;
         border-radius: 1em;
     }
-
     #apresentacao {
-        padding-left: 50em;
+        padding-left: 1em;
         text-align: right;
     }
-    
-    #sidebar{
+    #sidebar {
         display: none;
+    }
+    #div_navbar {
+        display: none;
+    }
+    #auto_propaganda {
+        display: inherit;
     }
 }
