--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -64,6 +64,7 @@ marquee {
 
 .topic_content {
     background-color: gainsboro;
+    border: 1px solid #000;
     border-radius: 1em;
     box-shadow: 10px 10px 5px;
 }
