--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -41,7 +41,6 @@ footer {
     text-align: center;
     border-radius: 1em;
     border: 1px, solid, #000;
-
 }
 
 footer img {
@@ -93,6 +92,22 @@ marquee {
     font-size: 18px;
 }
 
+#perfil {
+    margin: auto;
+    margin-top: 7em;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    text-align: center;
+}
+
+#perfil img {
+    width: 100%;
+    position: relative;
+    bottom: 6em;
+}
+
 #apresentacao {
     padding-left: 50em;
     text-align: right;
@@ -104,9 +119,13 @@ marquee {
     height: 10em;
     text-align: center;
     margin-left: 2em;
-    margin-top: 10em;
+    margin-top: 7em;
     overflow: hidden;
     position: fixed;
+}
+
+#sobre_mim{
+    margin-top: 0em; 
 }
 
 #auto_propaganda {
