Atualização no tamanho do perfil em responsividade

--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -162,6 +162,10 @@ marquee {
     #div_navbar {
         display: none;
     }
+    #perfil {     
+        width: 150px;
+        height: 150px;
+    }
     #auto_propaganda {
         display: inherit;
     }
