--- a/personal_css/estilo.css
+++ b/personal_css/estilo.css
@@ -11,6 +11,7 @@ h1 {
     padding: 2em 0em 0.5em 0em;
     color: rgb(218, 216, 216);
     text-align: center;
+    border: 1px, solid, #000;
 }
 
 h2 {
@@ -19,6 +20,7 @@ h2 {
     margin: auto;
     font-size: 18px;
     text-align: center;
+    border: 1px, solid, #000;
 }
 
 h4 {
@@ -26,6 +28,7 @@ h4 {
     width: 90%;
     margin: auto;
     text-align: center;
+    border: 1px, solid, #000;
 }
 
 div img {
@@ -162,9 +165,13 @@ marquee {
     #div_navbar {
         display: none;
     }
-    #perfil {     
+    #perfil {  
+        margin-top: 4em;   
         width: 150px;
         height: 150px;
+    }
+    #perfil img {
+        bottom: 4.5em;
     }
     #auto_propaganda {
         display: inherit;
