--- a/personal_css/style.css
+++ b/personal_css/style.css
@@ -78,7 +78,7 @@ footer i {
     font-size: 2.5rem;
 }
 
-@keyframes blink {
+/* @keyframes blink {
     0%, 100% {
         opacity: 1;
     }
@@ -94,7 +94,7 @@ footer i {
     to {
         filter: drop-shadow(0 0 3px var(--cor--neon));
     }
-}
+} */
 
 @media only screen and (max-width: 600px) {
     
