--- a/personal_css/style.css
+++ b/personal_css/style.css
@@ -29,7 +29,11 @@ nav{
 }
 
 footer{
+
     box-shadow: none;
+    /* background-color: rgb(241, 241, 241);
+    border: 1px solid #000;
+    border-radius: 1rem; */
 }
 
 .text-site {
@@ -76,6 +80,11 @@ footer i {
 #contactIcon i{
     color: black;
     font-size: 2.5rem;
+}
+
+#experience img{
+    width: 12rem;
+    height: 6rem;
 }
 
 /* @keyframes blink {
