--- a/personal_css/style.css
+++ b/personal_css/style.css
@@ -16,7 +16,7 @@ h2 {
     font-size: 2.5rem;
 }
 
-h3{
+h3 {
     font-size: 1.7rem;
 }
 
@@ -24,20 +24,24 @@ p, ol, ul {
     font-size: 18px;
 }
 
-ul{
-    list-style-type:disc
+ul {
+    list-style-type: disc
 }
 
-nav{
+nav {
     widows: 100%;
 }
 
-footer{
-
+footer {
     box-shadow: none;
     /* background-color: rgb(241, 241, 241);
     border: 1px solid #000;
     border-radius: 1rem; */
+}
+
+footer i {
+    color: black;
+    font-size: 2.5rem;
 }
 
 .text-site {
@@ -51,15 +55,10 @@ footer{
     box-shadow: 10px 10px 10px;
 }
 
-.bg-card-site{
+.bg-card-site {
     background-color: rgb(241, 241, 241);
     border: 1px solid #000;
     box-shadow: 10px 10px 10px;
-}
-
-footer i {
-    color: black;
-    font-size: 2.5rem;
 }
 
 .size-page {
@@ -71,33 +70,41 @@ footer i {
     height: auto;
 }
 
-.neon-site {
-    animation: neon 2s alternate infinite ease-in-out;
-    --cor--neon: #19c019;
-    
+.levitate {
+    position: relative;
+    top: 0;
+    transition: all .2s ease-in-out
+}
+
+.levitate:hover {
+    top: -10px;
+    box-shadow: 0 8px 20px rgb(48, 48, 48)
+}
+
+.experience img {
+    width: 100%;
+    height: auto;
 }
 
 #namePresentation {
     padding-left: 53rem;
 }
 
-#contactIcon i{
+#contactIcon i {
     color: black;
     font-size: 2.5rem;
 }
 
-.experience img{
-    width: 100%;
-    height: auto;
-
+#choice a{
+    color: black;
+    text-decoration: none;
+    text-decoration-style: none;
 }
 
 @media only screen and (max-width: 600px) {
-    
     body {
         background-size: 50em 35em;
     }
-    
     .img-perfil {
         width: 10rem;
     }
