--- a/personal_css/global.css
+++ b/personal_css/global.css
@@ -1,43 +1,67 @@
-/* Green #75FF00 */
-
-
-.bg-primary{
-    background-color: #75FF00 !important;
-}
-
-.text-primary{
-    color: #75FF00 !important;
-}
-
-.bg-blue{
-    background-color: steelblue;
-}
-
-.bg-pink{
-    background-color: palevioletred;
-}
-
-.navbar .nav-link {
-    color: #fff !important;
-}
-
-#backgroundAndTitle {
-    background-attachment: fixed;
+body {
+    font-family: sans-serif !important;
+    background-color: #ebe9f4;
+    background-image:
+        radial-gradient(at 47% 33%, hsl(345.71, 51%, 84%) 0, transparent 59%),
+        radial-gradient(at 82% 65%, hsl(345.71, 51%, 84%) 0, transparent 55%);
+    padding: 3rem;
     height: 100vh;
 }
 
-input[type=number]::-webkit-inner-spin-button { 
-    -webkit-appearance: none;
-    
-}
-input[type=number] { 
-   -moz-appearance: textfield;
-   appearance: textfield;
-
+h1 {
+    font-size: larger;
 }
 
-@media (min-width: 992px) {
-    #backgroundAndTitle {
-        margin-top: -58.59px;
-    }
+p {
+    font-size: large !important;
+}
+
+nav {
+    box-shadow: none !important;
+    background: none !important;
+    color: black;
+}
+
+#glassmorphism {
+    padding: 1rem 6rem;
+    background: rgba(235, 233, 244, 0.65);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(11px);
+    -webkit-backdrop-filter: blur(11px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+}
+
+.btn {
+    font-size: medium;
+    text-transform: none !important;
+    box-shadow: none !important;
+    border-radius: 2rem;
+}
+
+.btn-link {
+    background: none !important;
+    color: black !important;
+}
+
+.btn-secondary {
+    background-color: #FEFFFF !important;
+    color: #292323 !important;
+}
+
+.btn-primary {
+    background-color: #292323 !important;
+    color: #FEFFFF !important;
+}
+
+.btn i {
+    color: #FEFFFF;
+}
+
+.illustration {
+    width: 100%;
+    height: 100%;
 }
