--- a/personal_css/global.css
+++ b/personal_css/global.css
@@ -1,67 +1,31 @@
 body {
     font-family: sans-serif !important;
-    background-color: #ebe9f4;
-    background-image:
-        radial-gradient(at 47% 33%, hsl(345.71, 51%, 84%) 0, transparent 59%),
-        radial-gradient(at 82% 65%, hsl(345.71, 51%, 84%) 0, transparent 55%);
-    padding: 3rem;
+    background: rgb(43,46,55);
+    background: linear-gradient(90deg, rgba(43,46,55,1) 0%, rgba(45,47,59,1) 35%, rgba(29,30,35,1) 100%);
+    padding: 2rem;
     height: 100vh;
+    overflow-x: hidden;
+}
+
+.continous-flow {
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+}
+
+.section {
+    height: 100vh;
+    scroll-snap-align: start;
+}
+
+.text-primary {
+    color: #FCFFFF !important;
 }
 
 h1 {
-    font-size: larger;
+    font-size: 8rem;
 }
 
-p {
-    font-size: large !important;
-}
-
-nav {
-    box-shadow: none !important;
-    background: none !important;
-    color: black;
-}
-
-#glassmorphism {
-    padding: 1rem 6rem;
-    background: rgba(235, 233, 244, 0.65);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(11px);
-    -webkit-backdrop-filter: blur(11px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    width: 100%;
-    height: 100%;
-    border-radius: 1rem;
-}
-
-.btn {
-    font-size: medium;
-    text-transform: none !important;
-    box-shadow: none !important;
-    border-radius: 2rem;
-}
-
-.btn-link {
-    background: none !important;
-    color: black !important;
-}
-
-.btn-secondary {
-    background-color: #FEFFFF !important;
-    color: #292323 !important;
-}
-
-.btn-primary {
-    background-color: #292323 !important;
-    color: #FEFFFF !important;
-}
-
-.btn i {
-    color: #FEFFFF;
-}
-
-.illustration {
-    width: 100%;
-    height: 100%;
+h2 {
+    font-size: 4rem;
 }
